Pour chaque page, faire un lien vers sa version dans l'autre langue.

--- a/en/cats/chat-1.html
+++ b/en/cats/chat-1.html
@@ -39,6 +39,7 @@
   </section><a href="/en/cats/chat-2.html">
     <p class="click">Next</p>
   </a>
+  <a class="langue" href="/fr/cats/chat-1.html">Je parle Français !</a>
 </body>
 
 </html>
