--- a/en/cats/index.html
+++ b/en/cats/index.html
@@ -47,6 +47,7 @@
   <a href="/en/dogs/index.html"">
     <h3 class=" click">See our dogs</h3>
   </a>
+  <a class="langue" href="/fr/cats/index.html">Je parle Français !</a>
 </body>
 
 </html>
