--- a/en/dogs/chien-2.html
+++ b/en/dogs/chien-2.html
@@ -44,6 +44,7 @@
   <a href="/en/cats/index.html">
     <p class="click">See our catss</p>
   </a>
+  <a class="langue" href="/fr/dogs/chien-2.html">Je parle Français !</a>
 </body>
 
 </html>
