--- a/en/index.html
+++ b/en/index.html
@@ -72,7 +72,7 @@
       <dd>Ducimus quod non dolor quam?</dd>
 
   </dl>
-
+  <a class="langue" href="/fr/index.html">Je parle Français !</a>
 </body>
 
 </html>
