--- a/fr/cats/chat-1.html
+++ b/fr/cats/chat-1.html
@@ -39,6 +39,7 @@
   </section><a href="/fr/cats/chat-2.html">
     <p class="click">Suivant</p>
   </a>
+  <a class="langue" href="/en/cats/chat-1.html">I Speak English !</a>
 </body>
 
 </html>
