--- a/fr/cats/chat-2.html
+++ b/fr/cats/chat-2.html
@@ -44,7 +44,7 @@
   <a href="/fr/dogs/index.html">
     <p class="click">Voir nos chiens</p>
   </a>
-
+  <a class="langue" href="/en/cats/chat-2.html">I Speak English !</a>
 </body>
 
 </html>
