--- a/fr/cats/index.html
+++ b/fr/cats/index.html
@@ -47,6 +47,7 @@
   <a href="/fr/dogs/index.html"">
     <h3 class=" click">Voir nos chiens</h3>
   </a>
+  <a class="langue" href="/en/cats/index.html">I Speak English !</a>
 </body>
 
 </html>
