--- a/fr/dogs/chien-2.html
+++ b/fr/dogs/chien-2.html
@@ -44,6 +44,7 @@
   <a href="/fr/cats/index.html">
     <p class="click">Voir nos chats</p>
   </a>
+  <a class="langue" href="/en/dogs/chien-2.html">I Speak English !</a>
 </body>
 
 </html>
