--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
   <!-- header>h1{Test de menu} -->
 
   <nav>
-    <h1>What language do you speak?</h1>
-    <ul>
-      <li class="langue"><a href="/fr/">Francais</a></li>
-      <li class="langue"><a href="/en/">English</a></li>
-    </ul>
+    <h1 class="langue">What language do you speak?</h1>
+    <ol>
+      <li><a class="langue" href="/fr/">Francais</a></li>
+      <li><a class="langue" href="/en/">English</a></li>
+    </ol>
   </nav>
 
 </body>
