--- a/en/dogs/chien-1.html
+++ b/en/dogs/chien-1.html
@@ -42,6 +42,7 @@
   <a href="/en/dogs/chien-2.html">
     <p class="click">Next</p>
   </a>
+  <a class="langue" href="/fr/dogs/chien-1.html">Je parle Français !</a>
 </body>
 
 </html>
