--- a/en/dogs/index.html
+++ b/en/dogs/index.html
@@ -47,7 +47,7 @@
   <a href="/en/cats/index.html">
     <h3 class="click">See our cats</h3>
   </a>
-
+  <a class="langue" href="/fr/dogs/index.html">Je parle Français !</a>
 </body>
 
 </html>
