--- a/fr/dogs/chien-1.html
+++ b/fr/dogs/chien-1.html
@@ -40,6 +40,7 @@
   <a href="/fr/dogs/chien-2.html">
     <p class="click">Suivant</p>
   </a>
+  <a class="langue" href="/en/dogs/chien-1.html">I Speak English !</a>
 </body>
 
 </html>
