Ajouter du JavaScript pour mémoriser le choix de l'utilisateur

--- a/en/cats/chat-2.html
+++ b/en/cats/chat-2.html
@@ -44,7 +44,9 @@
   <a href="/en/dogs/index.html">
     <p class="click">See our dogs</p>
   </a>
-  <a class="langue" href="/fr/cats/chat-2.html">Je parle Français !</a>
+  <a class="langue" href="/fr/cats/chat-2.html" onclick="document.cookie = 
+`nf_lang=fr; path=/ ; SameSite=Strict`
+">Je parle Français !</a>
 </body>
 
 </html>
