--- a/en/cats/index.html
+++ b/en/cats/index.html
@@ -47,7 +47,9 @@
   <a href="/en/dogs/index.html"">
     <h3 class=" click">See our dogs</h3>
   </a>
-  <a class="langue" href="/fr/cats/index.html">Je parle Français !</a>
+  <a class="langue" href="/fr/cats/index.html" onclick="document.cookie = 
+`nf_lang=fr; path=/ ; SameSite=Strict`
+">Je parle Français !</a>
 </body>
 
 </html>
