--- a/en/dogs/chien-1.html
+++ b/en/dogs/chien-1.html
@@ -42,7 +42,9 @@
   <a href="/en/dogs/chien-2.html">
     <p class="click">Next</p>
   </a>
-  <a class="langue" href="/fr/dogs/chien-1.html">Je parle Français !</a>
+  <a class="langue" href="/fr/dogs/chien-1.html" onclick="document.cookie = 
+`nf_lang=fr; path=/ ; SameSite=Strict`
+">Je parle Français !</a>
 </body>
 
 </html>
