--- a/en/dogs/chien-2.html
+++ b/en/dogs/chien-2.html
@@ -44,7 +44,9 @@
   <a href="/en/cats/index.html">
     <p class="click">See our catss</p>
   </a>
-  <a class="langue" href="/fr/dogs/chien-2.html">Je parle Français !</a>
+  <a class="langue" href="/fr/dogs/chien-2.html" onclick="document.cookie = 
+`nf_lang=fr; path=/ ; SameSite=Strict`
+">Je parle Français !</a>
 </body>
 
 </html>
