--- a/fr/cats/chat-2.html
+++ b/fr/cats/chat-2.html
@@ -44,7 +44,9 @@
   <a href="/fr/dogs/index.html">
     <p class="click">Voir nos chiens</p>
   </a>
-  <a class="langue" href="/en/cats/chat-2.html">I Speak English !</a>
+  <a class="langue" href="/en/cats/chat-2.html" onclick="document.cookie = 
+`nf_lang=fr; path=/ ; SameSite=Strict`
+">I Speak English !</a>
 </body>
 
 </html>
