--- a/fr/cats/index.html
+++ b/fr/cats/index.html
@@ -47,7 +47,9 @@
   <a href="/fr/dogs/index.html"">
     <h3 class=" click">Voir nos chiens</h3>
   </a>
-  <a class="langue" href="/en/cats/index.html">I Speak English !</a>
+  <a class="langue" href="/en/cats/index.html" onclick="document.cookie = 
+`nf_lang=fr; path=/ ; SameSite=Strict`
+">I Speak English !</a>
 </body>
 
 </html>
