--- a/fr/dogs/chien-1.html
+++ b/fr/dogs/chien-1.html
@@ -40,7 +40,9 @@
   <a href="/fr/dogs/chien-2.html">
     <p class="click">Suivant</p>
   </a>
-  <a class="langue" href="/en/dogs/chien-1.html">I Speak English !</a>
+  <a class="langue" href="/en/dogs/chien-1.html" onclick="document.cookie = 
+`nf_lang=fr; path=/ ; SameSite=Strict`
+">I Speak English !</a>
 </body>
 
 </html>
