--- a/fr/dogs/chien-2.html
+++ b/fr/dogs/chien-2.html
@@ -44,7 +44,9 @@
   <a href="/fr/cats/index.html">
     <p class="click">Voir nos chats</p>
   </a>
-  <a class="langue" href="/en/dogs/chien-2.html">I Speak English !</a>
+  <a class="langue" href="/en/dogs/chien-2.html" onclick="document.cookie = 
+`nf_lang=fr; path=/ ; SameSite=Strict`
+">I Speak English !</a>
 </body>
 
 </html>
