--- a/fr/index.html
+++ b/fr/index.html
@@ -72,7 +72,9 @@
       <dd>Ducimus quod non dolor quam?</dd>
 
   </dl>
-  <a class="langue" href="/en/index.html">I Speak English !</a>
+  <a class="langue" href="/en/index.html" onclick="document.cookie = 
+`nf_lang=fr; path=/ ; SameSite=Strict`
+">I Speak English !</a>
 </body>
 
 </html>
