--- a/en/cats/chat-1.html
+++ b/en/cats/chat-1.html
@@ -39,7 +39,9 @@
   </section><a href="/en/cats/chat-2.html">
     <p class="click">Next</p>
   </a>
-  <a class="langue" href="/fr/cats/chat-1.html">Je parle Français !</a>
+  <a class="langue" href="/fr/cats/chat-1.html" onclick="document.cookie = 
+`nf_lang=fr; path=/ ; SameSite=Strict`
+">Je parle Français !</a>
 </body>
 
 </html>
