--- a/fr/cats/chat-1.html
+++ b/fr/cats/chat-1.html
@@ -39,7 +39,9 @@
   </section><a href="/fr/cats/chat-2.html">
     <p class="click">Suivant</p>
   </a>
-  <a class="langue" href="/en/cats/chat-1.html">I Speak English !</a>
+  <a class="langue" href="/en/cats/chat-1.html" onclick="document.cookie = 
+`nf_lang=fr; path=/ ; SameSite=Strict`
+">I Speak English !</a>
 </body>
 
 </html>
