--- a/fr/dogs/index.html
+++ b/fr/dogs/index.html
@@ -47,7 +47,9 @@
   <a href="/fr/cats/index.html">
     <h3 class="click">Voir nos chats</h3>
   </a>
-  <a class="langue" href="/en/dogs/index.html">I Speak English !</a>
+  <a class="langue" href="/en/dogs/index.html" onclick="document.cookie = 
+`nf_lang=fr; path=/ ; SameSite=Strict`
+">I Speak English !</a>
 </body>
 
 </html>
