--- a/en/index.html
+++ b/en/index.html
@@ -8,6 +8,8 @@
   <title>Pets</title>
   <link rel="icon" href='/public/icones/animals.svg'>
   <link rel="stylesheet" href="/src/css/styles.css">
+  <link rel="alternate" hreflang="en" href="/en/index.html">
+  </link>
   <script defer src="https://unpkg.com/alpinejs"></script>
 </head>
 
