--- a/en/dogs/index.html
+++ b/en/dogs/index.html
@@ -8,6 +8,7 @@
   <title>Dogs !</title>
   <link rel="icon" href="/public/icones/animals.svg">
   <link rel="stylesheet" href="/src/css/styles.css">
+  <link rel="alternate" hreflang="en" href="/en/dogs/index.html">
   <script defer src="https://unpkg.com/alpinejs"></script>
 </head>
 
