--- a/fr/cats/chat-2.html
+++ b/fr/cats/chat-2.html
@@ -8,6 +8,7 @@
   <title>Les chats !</title>
   <link rel="icon" href="/public/icones/animals.svg">
   <link rel="stylesheet" href="/src/css/styles.css">
+  <link rel="alternate" hreflang="fr" href="/fr/cats/chat-2.html">
   <script defer src="https://unpkg.com/alpinejs"></script>
 </head>
 
